# Ford_AVData_GT_Pose_Mapping

./: CMakeLists.txt  README.md  package.xml
include/ford_mapping_lib/: PointXYZIRD.hpp
launch/: ford_bag2csv.launch  ford_mapping.launch  lidar_convert.launch  unity_simPt2Bag.launch
src/: ford_bag2csv.cpp  ford_mapping.cpp  ford_pose_bag2csv.cpp  unity_simPt2Bag.cpp
